LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/X6Sense_Stage_Change__c.object-meta.xml
<CustomObject>
    <description>AUTO - Created by OPPY6S Apex classes. These detail the time that a 6Sense Buying Stage (accountBuyingStage6sense__c) value is changed on the Account, and subsequent Sales / Marketing activity.</description>
    <label>6Sense Stage Change</label>
    <nameField>
        <label>6Sense Stage Change Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>6Sense Stage Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>