LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>AUTO - Filled by OPPY6S classes. The Account where the 6Sense Buying Stage has changed.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>6Sense Stage Changes</relationshipLabel>
    <relationshipName>X6Sense_Stage_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>