LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>AUTO - Populated by SIXSENSE classes. The type of the Account at the moment the stage change occurs.</description>
    <inlineHelpText>The type of the Account at the moment the stage change occurs. This may not be the current type of the Account.</inlineHelpText>
    <label>Account Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>