LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Associated_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Associated_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AUTO - Populated by SIXSENSE classes. If an Opportunity is opened while the 6SSC is open, or an Opportunity is already open, then that Opportunity will be linked in this field.</description>
    <label>Associated Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>6Sense Associated Opportunity</relationshipLabel>
    <relationshipName>X6Sense_Stage_Changes1</relationshipName>
    <type>Lookup</type>
</CustomField>