LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Cycle_Time__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Time__c</fullName>
    <description>AUTO - Populated by SIXSENSE classes. The time between Created Date and Close Date for the Associated Opportunity. Calculated when the Associated Opportunity is closed.</description>
    <label>Cycle Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>