LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Days_in_Old_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Old_Stage__c</fullName>
    <description>AUTO - Populated by SIXSENSE classes. The time that the Account was in the old stage.</description>
    <label>Days in Old Stage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>