LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Days_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Stage__c</fullName>
    <description>AUTO - The amount of time in the current stage. If Exit Date is blank (that is, Account is still in the current stage), then it is TODAY minus the Entry Date.</description>
    <formula>IF(
   ISBLANK(Exit_Date__c),
   TODAY() - Entry_Date__c,
   Exit_Date__c - Entry_Date__c
)</formula>
    <label>Days in Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>