LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Days_to_Create_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Create_Opportunity__c</fullName>
    <description>AUTO - The number of days from stage Entry Date to when an Opportunity is created.</description>
    <label>Days to Create Opportunity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>