LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>AUTO - Populated by SIXSENSE classes. The date that the Account entered this 6S stage.</description>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>