LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date__c</fullName>
    <description>AUTO - Populated by SIXSENSE classes. The date that this Account exited the current stage.</description>
    <label>Exit Date</label>
    <type>Date</type>
</CustomField>