LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/First_Marketing_Touch__c.field-meta.xml
<CustomField>
    <fullName>First_Marketing_Touch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AUTO - Populated by SIXSENSE classes. The first Marketing touch, if any, while this 6SSC is open.</description>
    <label>First Marketing Touch</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>6S Stage Change - First Touch - Marketing</relationshipLabel>
    <relationshipName>X6Sense_Stage_Changes1</relationshipName>
    <type>Lookup</type>
</CustomField>