LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/First_Marketing_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Marketing_Touch_Date__c</fullName>
    <description>AUTO - Populated by SIXSENSE classes. The first Campaign activity from Marketing while this 6SSC is open.</description>
    <label>First Marketing Touch Date</label>
    <type>Date</type>
</CustomField>