LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/First_Sales_Touch__c.field-meta.xml
<CustomField>
    <fullName>First_Sales_Touch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AUTO - Populated by SIXSENSE classes. The first Sales touch, if any, while this 6S Stage is open. More details in GDrive documentation.</description>
    <label>First Sales Touch</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>6S Stage Change - First Touch - Sales</relationshipLabel>
    <relationshipName>X6Sense_Stage_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>