LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/First_Sales_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Sales_Touch_Date__c</fullName>
    <description>AUTO - Populated by SIXSENSE classes. The date of the first Sales touch.</description>
    <label>First Sales Touch Date</label>
    <type>Date</type>
</CustomField>