LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Most_Recent_CL_Oppy__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_CL_Oppy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AUTO - Populated by SIXSENSE classes. When the stage change occurs, this is the most recent Closed Lost Opportunity at that time.</description>
    <label>Most Recent Lost Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>6Sense Lost Opportunity</relationshipLabel>
    <relationshipName>X6Sense_Stage_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>