LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Most_Recent_Lost_Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Lost_Opportunity_Close_Date__c</fullName>
    <formula>Most_Recent_CL_Oppy__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Lost Opportunity Close Date</label>
    <type>Date</type>
</CustomField>