LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Old_Stage__c.field-meta.xml
<CustomField>
    <fullName>Old_Stage__c</fullName>
    <label>Old Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>