LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Opportunity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Outcome__c</fullName>
    <description>AUTO - Populated by SIXSENSE classes. The outcome of the Associated Opportunity, either LOST or WON.</description>
    <label>Opportunity Outcome</label>
    <length>50</length>
    <type>Text</type>
</CustomField>