LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <description>AUTO - Populated by SIXSENSE classes. Documentation in GDrive will summarize statuses.</description>
    <label>Opportunity Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>