LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>AUTO - Populated by OPPY6S classes. The new stage for this Account.</description>
    <label>Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>