LWCLearnwithFLOWOrg/force-app/main/default/objects/X6Sense_Stage_Change__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>AUTO - The overall status of the 6SSC. Used for querying.</description>
    <formula>IF(
   ISBLANK(Exit_Date__c),
   &quot;OPEN&quot;,
   &quot;CLOSED&quot;
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>